God what a horrible default color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #b07d3f;
+  		background-color: white;
 		  font-family: "Helvetica,Arial,FreeSans";
   		color: #ffffff;
     }
