--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   		margin-top: 1.0em;
   		background-color: white;
 		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
+  		color: black;
     }
     #container {
       margin: 0 auto;
